2002-03-18  Matthias Clasen  <maclas@gmx.de>

	* io-tga.c: Fix assumptions on rowstride by manually allocating a
	contiguous pixel buffer. Catch buffer overruns in RLE-modi. 
	Support grayscale + alpha (which can be written, but not read (!)
	by the Gimp). 

2002-03-15  Matthias Clasen  <maclas@gmx.de>

	* io-gif.c (gif_get_frame_info): Catch invalid frame dimensions.

2002-03-13  Matthias Clasen  <maclas@gmx.de>

	* test-images.h: Add valid_ras_test and invalid_bmp_1.

	* test-loaders.c (main): Add random tests for ras and pnm and an
	invalid bmp which was a crasher until my 2002-03-12 commit.

	* io-pnm.c (gdk_pixbuf__pnm_image_load_increment): Don't unref the
	pixbuf on errors.

	* io-ras.c: Handle some errors.

2002-03-12  Sven Neumann  <sven@gimp.org>

	* gdk-pixbuf.c (gdk_pixbuf_fill): use sequential writes instead of
	calling memcpy(). Simpler and potentially faster. (#70332)

2002-03-12  Matthias Clasen  <maclas@gmx.de>

	* io-bmp.c (DecodeHeader): Replace a g_assert_not_reached ()
	which could actually be reached by a proper error status return.

2002-03-05  Matthias Clasen  <maclas@gmx.de>

	* test-loaders.c, test-images.h: More random tests. 

	* io-bmp.c (DecodeHeader): Fail gracefully on OOM here.

Tue Mar  5 10:39:03 2002  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am (loaderdir): Put the modules into the
	GTK_BINARY_VERSION directory for consistency with
	immodules and theme engines.

Sat Mar  2 22:11:10 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk-pixbuf-io.c (_gdk_pixbuf_load_module): If we
	can't load the module using the g_module_build_path()
	filename, try loading it as a .la file.

	* test-loaders.c: Look for modules in current directory
	rather than .libs, so we find the right .la files.

	* test-loaders.c: Back out some accidental commits.

Sat Mar  2 21:28:03 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk-pixbuf.c (gdk_pixbuf_new): Bullet-proof against integer
	overflow.

2002-03-03  Tor Lillqvist  <tml@iki.fi>
